General UX improvements

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -71,3 +71,27 @@ body {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.6);
 }
+
+figcaption {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+}
+
+figcaption h1 {
+    font-size: 14px;
+    margin: 1px;
+}
+
+figcaption h2 {
+    font-size: 12px;
+    margin: 1px;
+}
+
+figcaption small {
+    font-size: 10px;
+    margin: 0 5px;
+    display: inline;
+}
+
